--- a/mean/package.json
+++ b/mean/package.json
@@ -25,6 +25,7 @@
     "@angular/platform-browser-dynamic": "^9.1.4",
     "@angular/router": "^9.1.4",
     "@ckeditor/ckeditor5-angular": "^2.0.1",
+    "@types/multer": "^1.4.4",
     "bcrypt": "^3.0.2",
     "body-parser": "^1.18.2",
     "ckeditor": "^4.12.1",
@@ -47,6 +48,7 @@
     "method-override": "^2.3.10",
     "mongoose": "^5.7.5",
     "morgan": "^1.9.1",
+    "multer": "^1.4.2",
     "nodemon": "^1.17.5",
     "passport": "^0.4.0",
     "passport-jwt": "^4.0.0",
